# Transit-Reliability-Score

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_stage3_importer_support_import_log.py  004_stage5_matched_arrivals.py  005_stage6_agg_run_log.py  151e83983aaf_add_stop_times_unique_trip_sequence.py  stage4_rt_realtime_tables.py
apps/api/src/transit_api/: __init__.py  config.py  database.py  logging.py  main.py  models.py
apps/api/src/transit_api/models/: __init__.py  base.py  gtfs.py  import_log.py  matching.py  observations.py  realtime.py  users.py
apps/api/src/transit_api/routers/: __init__.py  admin.py  ingest.py  scores.py  stops.py
apps/api/src/transit_api/services/aggregation/: __init__.py  engine.py  scorer.py
apps/api/src/transit_api/services/gtfs_rt/: __init__.py  decoder.py  fetcher.py  normalizer.py  worker.py  writer.py
apps/api/src/transit_api/services/gtfs_static/: __init__.py  fetcher.py  importer.py  normalizer.py  parser.py  reader.py
apps/api/src/transit_api/services/matching/: __init__.py  engine.py
apps/api/tests/: __init__.py  conftest.py  test_aggregation_api.py  test_aggregation_integration.py  test_gtfs_admin_api.py  test_gtfs_fetcher.py  test_gtfs_importer.py  test_gtfs_importer_integration.py  test_gtfs_normalizer.py  test_gtfs_parser.py  test_gtfs_reader.py  test_gtfs_rt_api.py  test_gtfs_rt_db_integration.py  test_gtfs_rt_decoder.py  test_gtfs_rt_fetcher.py  test_gtfs_rt_integration.py  test_gtfs_rt_normalizer.py  test_gtfs_rt_worker.py  test_gtfs_rt_writer.py  test_health.py  test_matching_api.py  test_matching_engine.py  test_matching_engine_internal.py  test_matching_integration.py  test_migration_lifecycle_integration.py  test_migrations.py  test_models.py  test_public_api_integration.py  test_query_indexes.py  test_scoring_unit.py  test_stops_api.py
apps/api/tests/fixtures/: gtfs_fixture.py  gtfs_rt_fixture.py
apps/mobile/: .env.example  .eslintrc.js  app.config.js  app.json  global.d.ts  jest.config.js  package.json  tsconfig.json
apps/mobile/__mocks__/@rnmapbox/: maps.tsx
apps/mobile/__tests__/: FilterChips.test.tsx  RiskyStopRow.test.tsx  ScoreCard.test.tsx  TrendChart.test.tsx  api.test.ts  formatters.test.ts  home.test.tsx  time.test.ts
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/(tabs)/: _layout.tsx  index.tsx  risky.tsx  settings.tsx
apps/mobile/app/stop/: [id].tsx
apps/mobile/src/api/: client.ts  endpoints.ts
apps/mobile/src/components/: EmptyState.tsx  (+7 more)
docs/: stage5_plan.md
infrastructure/docker/: Dockerfile.api  docker-compose.yml
(+14 files in other folders)
