[project]
name = "transit-api"
version = "0.1.0"
description = "Transit Reliability Score API for Metro Vancouver (TransLink)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "protobuf>=5.29.0",
    "gtfs-realtime-bindings>=1.0.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-protobuf>=5.28.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transit_api"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP017",  # datetime.UTC alias requires Python 3.11+ (runtime is 3.9)
    "UP006",  # use dict/list instead of Dict/List - needed for Pydantic on 3.9
    "UP007",  # use X | Y union syntax - needed for Pydantic on 3.9
    "UP035",  # typing.Dict/List deprecated - needed for Pydantic on 3.9
    "UP045",  # X | None syntax requires Python 3.10+ (runtime is 3.9)
]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["TC003"]

[tool.ruff.lint.isort]
known-first-party = ["transit_api"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "gtfs_realtime_pb2",
    "google.transit.gtfs_realtime_pb2",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
